# LLM_Translator

./: .gitignore  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/android/llmtranslator/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/translator/: MainActivity.kt
app/src/main/java/com/translator/audio/: AndroidSpeechTranscriber.kt  AudioRecorder.kt  StreamingTranscriber.kt  TtsPlayer.kt  WhisperModelLoader.kt
app/src/main/java/com/translator/screen/: AudioTranslationScreen.kt  InterpreterScreen.kt  TextTranslationScreen.kt  index.kt
app/src/main/java/com/translator/ui/main/: MainScreen.kt
app/src/main/java/com/translator/ui/state/: AudioTranslationUiState.kt  InterpreterUiState.kt  LanguageRepository.kt  TranslationUiState.kt
app/src/main/java/com/translator/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/translator/ui/viewmodel/: AudioTranslationViewModel.kt  InterpreterViewModel.kt  TranslationViewModel.kt
app/src/main/java/com/translator/util/: PerformanceLogger.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/android/llmtranslator/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
lib/src/main/jni/whisper/: CMakeLists.txt
